--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -1214,6 +1214,11 @@ body.ancestor-camps {
     a:hover {
       color: #01a490;
     }
+    p.button {
+      a:hover {
+        color: #fff;
+      }
+    }
   }
   .navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
     background-color: #01a490;
