--- a/themes/openy_themes/openy_rose/scss/modules/_schedules.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_schedules.scss
@@ -241,6 +241,13 @@
       }
     }
   }
+
+  .form-control  {
+    &[readonly], &[disabled] {
+      color: $dark_grey;
+      background: $lighter-grey;
+    }
+  }
 }
 
 #schedules-search-listing-wrapper {
