--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -7047,6 +7047,13 @@ textarea:focus,
   outline: 5px auto #69ff00;
 }
 
+input[type="file"]:focus,
+input[type="radio"]:focus,
+input[type="checkbox"]:focus {
+  box-shadow: 0px 0px 3px 3px #69ff00;
+  outline: none;
+}
+
 .focusable.skip-link:focus {
   position: fixed !important;
   top: 0;
