--- a/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
+++ b/docroot/themes/custom/ymca/sass/misc/_camp_du_nord.scss
@@ -11,10 +11,10 @@
       margin: 0 auto 80px;
     }
     h2 {
-      font-size: 20px;
+      font-size: 30px;
       font-family: "Cachet Book", Arial, sans-serif;
-      font-weight: normal;
       margin-bottom: 20px;
+      color: #2f2f2f;
     }
   }
   .form-item-arrival-date,
@@ -31,7 +31,7 @@
     }
     input {
       background: #fff url("../img/icon-calendar2.png") no-repeat 20px center;
-      height: 60px;
+      height: 50px;
       padding-left: 65px;
       font-family: "Cachet Book", Arial, sans-serif;
       font-size: 18px;
@@ -43,7 +43,7 @@
       float: left;
     }
     @include breakpoint(1025px) {
-      width: 335px;
+      width: 290px;
     }
   }
   .form-item-arrival-date {
@@ -72,16 +72,17 @@
     }
     @include breakpoint(1025px) {
       margin: 0 30px;
-      width: 270px;
+      width: 250px;
     }
     select {
       background: #fff;
       border-color: #dadada;
-      height: 60px;
+      height: 50px;
       font-family: "Cachet Book", Arial, sans-serif;
-      font-size: 18px;
+      font-size: 16px;
+      font-weight: bold;
       text-indent: 25px;
-      color: #222222;
+      color: #2f2f2f;
       -webkit-appearance: none;
       -moz-appearance: none;
       -ms-appearance: none;
@@ -90,14 +91,15 @@
       background-position: 93% 50%;
       background-repeat: no-repeat;
       background-color: $white;
+      text-transform: uppercase;
     }
   }
   .form-item-village,
   .form-item-capacity {
     border: 1px solid #dadada;
     background-color: #fff;
-    height: 60px;
-    line-height: 60px;
+    height: 50px;
+    line-height: 50px;
     @include breakpoint(768px) {
       float: left;
       margin-right: 40px;
@@ -109,7 +111,7 @@
     label {
       font-size: 15px;
       letter-spacing: -0.5px;
-      color: #777777;
+      color: #959595;
       display: inline-block;
       font-weight: normal;
       margin: 0 0 0 15px;
@@ -128,7 +130,7 @@
       -moz-appearance: none;
       -ms-appearance: none;
       appearance: none;
-      height: 58px;
+      height: 48px;
       background: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>");
       background-position: 93% 50%;
       background-repeat: no-repeat;
@@ -159,7 +161,7 @@
       font-size: 15px;
       line-height: 20px;
       letter-spacing: -0.5px;
-      color: #777777;
+      color: #2f2f2f;
       @include breakpoint(768px) {
         line-height: 40px;
       }
@@ -175,12 +177,14 @@
     background: #f4791f;
     border: none;
     box-shadow: none;
-    font-size: 16px;
-    height: 60px;
+    font-size: 18px;
+    font-family: "Cachet Book", Arial, sans-serif;
+    font-weight: bold;
+    height: 50px;
     width: 100%;
     @include breakpoint(768px) {
       float: left;
-      width: 170px;
+      width: 150px;
     }
     @include breakpoint(1024px) {
       float: right;
@@ -224,7 +228,7 @@
 .cdn-village-calendars {
   padding-bottom: 20px;
   @include breakpoint(768px) {
-    background: #f5f5f5;
+    background: #f8f8f8;
     padding-bottom: 80px;
   }
   .cdn-calendar {
@@ -241,7 +245,7 @@
       position: relative;
       @include breakpoint(768px) {
         margin: 70px auto;
-        max-width: 770px;
+        max-width: 690px;
       }
       .title {
         font-family: "Cachet Book", Arial, sans-serif;
@@ -260,7 +264,7 @@
         color: #f4791f;
         display: none;
         font-size: 27px;
-        height: 60px;
+        height: 50px;
         line-height: 55px;
         position: absolute;
         right: 60px;
@@ -268,7 +272,7 @@
         top: 10px;
         width: 60px;
         @include breakpoint(768px) {
-          display: block;
+
         }
       }
       .close-cal {
@@ -294,9 +298,10 @@
   height: 0;
   @include breakpoint(768px) {
     height: auto;
-    max-width: 770px;
+    max-width: 690px;
     margin: 0 auto 3px;
-    box-shadow: 0 0 6px #ccc;
+    border-radius: 10px;
+    border: 2px solid #d8d8d8;
     background: none;
   }
   .views-exposed-form {
@@ -304,9 +309,10 @@
   }
 }
 .fullcalendar {
-  padding: 35px;
+  padding: 30px;
   @include breakpoint(768px) {
-    background-color: #fff;
+    background-color: #f8f8f8;
+    border-radius: 10px;
   }
   .fc-scroller {
     height: 550px !important;
@@ -328,9 +334,9 @@
   .fc-header-toolbar {
     display: none;
     @media (min-width: 768px) {
-      background-color: #fff;
+      background-color: #f8f8f8;
       margin-bottom: 0;
-      padding: 23px 0 20px;
+      padding: 13px 0 10px;
       display: block;
     }
     .fc-center {
@@ -371,7 +377,7 @@
     }
     .fc-head-container {
       .fc-row {
-        background: #fff;
+        background: #f8f8f8;
       }
       th {
         font-family: "Cachet Book", Arial, sans-serif;
@@ -383,7 +389,7 @@
           display: block;
           height: 50px;
           line-height: 50px;
-          background-color: #fff;
+          background-color: #f8f8f8;
         }
       }
     }
@@ -391,22 +397,22 @@
       background: none;
     }
     .fc-day {
-      background-color: #fff;
+      background-color: #f8f8f8;
     }
     .fc-day-top,
     .fc-day-number {
       font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-size: 30px;
+      font-size: 24px;
       letter-spacing: -0.6px;
       text-align: left;
-      color: #555;
+      color: #2f2f2f;
       padding: 15px 25px;
       .fc-day-number {
         float: none;
       }
       @media (min-width: 768px) {
         text-align: center;
-        padding: 24px 0 15px 0;
+        padding: 25px 0 0 0;
       }
     }
     a.cdn-prs-product {
@@ -415,31 +421,45 @@
       font-size: 15px;
       letter-spacing: -0.4px;
       color: #3e3e3e;
-      margin: 0;
       border-radius: 0;
       padding: 0;
       text-align: center;
       position: relative;
       @media (min-width: 768px) {
-        background: $white;
-        border: solid 1px $white;
+        background: #f8f8f8;
+        border: solid 2px #f8f8f8;
+        margin: 2px;
       }
       &.selected {
-        border: solid 2px #f4791f;
+        border: solid 2px #0089d0;
+        border-radius: 8px;
         .fc-day-number {
-          color: #f4791f;
+          color: #0089d0;
         }
       }
       &.first-selected {
-        border-radius: 5px 0 0 5px;
+        //border-radius: 8px 0 0 8px;
       }
       &.last-selected {
-        border-radius: 0 5px 5px 0;
+        .fc-title {
+          display: none;
+        }
+        .q-mark {
+          display: inline;
+        }
+        .tip-q {
+          display: block;
+        }
+        &:hover {
+          .tip {
+            display: block;
+          }
+        }
       }
       &.no-left-border {
         //border-top-color: #eaeaea;
         @media (min-width: 768px) {
-          border-left: none;
+          //border-left: none;
         }
         .fc-content {
           //margin-left: 0;
@@ -448,39 +468,77 @@
       &.no-right-border {
         //border-bottom-color: #eaeaea;
         @media (min-width: 768px) {
-          border-right: none;
+          //border-right: none;
         }
         .fc-content {
           //margin-right: 0;
         }
       }
+      .fc-day-number {
+        padding: 10px 0 0 0;
+      }
       .fc-content {
-        background: #eaeaea;
+        position: relative;
         margin: 0;
         overflow: inherit;
-        border-radius: 5px;
+        border-radius: 8px;
         @media (min-width: 768px) {
           margin: 8px;
+        }
+      }
+      &.booked {
+        .fc-content {
+          background: #d8d8d8;
+        }
+        .fc-title {
+          display: none;
+        }
+        .fc-day-number {
+          padding: 18px 0;
         }
       }
       .fc-time {
         display: none;
       }
       .fc-title {
-
+        color: #959595;
+        font-size: 16px;
+        display: block;
+        padding-bottom: 8px;
+        .q-mark {
+          display: none;
+        }
+      }
+      .tip-q {
+        color: #959595;
+        font-size: 16px;
+        display: none;
+        padding-bottom: 8px;
+        .q-mark {
+          margin-left: 5px;
+        }
+      }
+      .tip {
+        background: #f8f8f8;
+        top: 0;
+        position: absolute;
+        display: none;
+        white-space: normal;
+        width: 100%;
+        height: 100%;
       }
     }
     .fc-content-skeleton {
       background: #f5f5f5;
       @media (min-width: 768px) {
-        background: #fff;
+        background: #f8f8f8;
       }
       tbody {
         tr {
           td {
             display: block;
             @media (min-width: 768px) {
-              background: #fff;
+              background: #f8f8f8;
               display: table-cell;
             }
           }
@@ -611,6 +669,19 @@
       }
     }
   }
+  .js-form-type-textfield {
+    label {
+      color: #a1a1a1;
+      font-size: 15px;
+      text-transform: none;
+      font-weight: normal;
+    }
+    input {
+      height: 50px;
+      color: #222222;
+      background: #fff;
+    }
+  }
   #edit-extra-mattress--wrapper {
     float: left;
   }
@@ -621,6 +692,7 @@
     @include breakpoint(992px) {
       border-right: 1px solid #f4f4f4;
       float: left;
+      padding-right: 50px;
       width: 49%;
     }
   }
@@ -638,7 +710,7 @@
     }
     input,
     select {
-      height: 60px;
+      height: 50px;
       color: #222222;
       background: #fff;
     }
@@ -706,6 +778,53 @@
       @include breakpoint(992px) {
         float: right;
         width: auto;
+      }
+    }
+  }
+}
+
+.cdn-village-footer {
+  background: #383838;
+  padding: 50px 0 25px;
+  .cdn-village-footer-bar {
+    display: none;
+    &.active {
+      display: block;
+    }
+    @include breakpoint(768px) {
+      float: right;
+      text-align: right;
+    }
+    .total {
+      display: inline-block;
+      font-size: 24px;
+      color: #888888;
+      width: 100%;
+      @include breakpoint(768px) {
+        margin-right: 30px;
+        display: inline-block;
+        width: auto;
+      }
+      .price {
+        color: #fff;
+      }
+    }
+    .prev-step,
+    .next-step {
+      background: #0089d0;
+      font-size: 18px;
+      color: #fff;
+      text-transform: uppercase;
+      display: inline-block;
+      border-radius: 7px;
+      padding: 10px 22px;
+      box-shadow: none;
+      font-family: "Cachet Book", Arial, sans-serif;
+      text-decoration: none;
+      font-weight: bold;
+      line-height: 40px;
+      @include breakpoint(992px) {
+        margin-left: 30px;
       }
     }
   }
