--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -966,6 +966,9 @@ label {
   border: 1px solid #ebccd1;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+.path-account .status-message {
+  margin: 0 0 30px 0 !important;
+}
 
 #ajax-ccc-account-login-form [data-drupal-selector="edit-login"] {
   padding: 13px 25px;
@@ -3067,15 +3070,19 @@ body.path-search #block-mainpagecontent li {
   padding: 40px 0;
 }
 .program-header .content .image {
-  margin: 0;
-  position: static;
+  margin: -130px 0 0;
+  position: absolute !important;
+  right: 0;
+  height: 260px;
+  padding-right: 0;
+  text-align: right;
+  top: 50%;
 }
 .program-header .content .image img {
-  right: 0;
-  position: absolute;
-  top: 0;
-  height: 100%;
+  height: 260px;
   width: auto;
+  display: inline;
+  position: static !important;
 }
 .program-header .description .field-program-description {
   font-size: 14px;
