--- a/openy_lily/sass/misc/_forms.scss
+++ b/openy_lily/sass/misc/_forms.scss
@@ -173,6 +173,10 @@ label {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
   }
+
+  .path-account & {
+    margin: 0 0 30px 0 !important;
+  }
 }
 
 #ajax-ccc-account-login-form {
