--- a/openy_lily/sass/misc/_program.scss
+++ b/openy_lily/sass/misc/_program.scss
@@ -5,17 +5,22 @@
       padding: 40px 0;
     }
     .image {
-      margin: 0;
-      position: static;
+      margin: -130px 0 0;
+      position: absolute !important;
+      right: 0;
+      height: 260px;
+      padding-right: 0;
+      text-align: right;
+      top: 50%;
       img {
-        right: 0;
-        position: absolute;
-        top: 0;
-        height: 100%;
+        height: 260px;
         width: auto;
+        display: inline;
+        position: static !important;
       }
     }
   }
+
   margin-bottom: 35px;
   .description {
     .field-program-description {
