[OYPD-604] Changes requested by AlexNetman.

--- a/themes/openy_themes/openy_rose/templates/views/views-view.html.twig
+++ b/themes/openy_themes/openy_rose/templates/views/views-view.html.twig
@@ -35,6 +35,8 @@
 {%
   set classes = [
     dom_id ? 'js-view-dom-id-' ~ dom_id,
+    css_name,
+    css_name == 'taxonomy-term' ? 'container',
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
