--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-confirmation-page.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-confirmation-page.html.twig
@@ -22,7 +22,7 @@
     <div class="col-xs-12">
     {% if data %}
       <h2>{{ data.village_name }}</h2>
-      <h3>{{ data.cabin_name }}</h3>
+      <div class="description">{{ 'You are going to book'|t }} <span class="cabin-name">"{{ data.cabin_name }}"</span> {{ 'for next dates:'|t }}</div>
       <ul>
       {% for date in data.dates %}
         {% if date.available %}
