--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-results-wrapper.html.twig
@@ -23,6 +23,7 @@
         <a href="#" class="close-cal">x</a>
         <a href="#" class="view"><i class="fa fa-eye" aria-hidden="true"></i></a>
         <h2 class="title">{{ teaser.teaser['#title'] }}</h2>
+        <p><strong>{{ 'Please select check in and check out dates*'|t }}</strong></p>
       </div>
       <div class="cdn-calendar-list">
         {{ teaser.calendar.list }}
