--- a/openy_lily/templates/paragraphs/paragraph--small-text-banner.html.twig
+++ b/openy_lily/templates/paragraphs/paragraph--small-text-banner.html.twig
@@ -66,7 +66,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
       </div>
       {% if background is not empty %}
         <div class="col-sm-6 header-image"
-             style="background-image: url({{ content.image_path }});">
+            {% if content.image_path %} style="background-image: url({{ content.image_path }});"{% endif %}>
           <figure class="text-center visible-xs">
             {{ content.field_prgf_image }}
           </figure>
