--- a/openy_lily/sass/misc/_ccc.scss
+++ b/openy_lily/sass/misc/_ccc.scss
@@ -96,3 +96,13 @@
   padding: 13px 25px;
 }
 
+.openy-ccc-show-program-info {
+  .ajax-progress {
+    right: 150px;
+    top: auto;
+    margin-top: -4px !important;
+    z-index: 999;
+    bottom: -57px;
+    left: auto !important;
+  }
+}
