--- a/openy_lily/sass/misc/_ccc.scss
+++ b/openy_lily/sass/misc/_ccc.scss
@@ -71,12 +71,12 @@
       top: -8px;
     }
     summary {
-      display: inline-block;
+      display: list-item;
       font-weight: bold;
       font-size: 18px;
       font-family: 'Cachet', Helvetica, Arial, sans-serif;
       float: left;
-      width: 75%;
+      width: 80%;
     }
     .status-message {
       clear: both;
