--- a/openy_lily/sass/misc/_program.scss
+++ b/openy_lily/sass/misc/_program.scss
@@ -99,8 +99,15 @@
 }
 
 .ui-dialog {
-  .ui-dialog-content {
-    overflow: auto;
+  form {
+    [data-drupal-selector="edit-actions"] .ajax-progress {
+      left: auto;
+      top: auto;
+      margin-top: 0;
+      -webkit-background-clip: 0;
+      right: -25px;
+      bottom: 10px;
+    }
   }
   .ui-dialog-buttonpane {
     .ui-dialog-buttonset {
