--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -3169,13 +3169,8 @@ body.path-search #block-mainpagecontent li {
   border-radius: 4px;
 }
 
-.ui-dialog form [data-drupal-selector="edit-actions"] .ajax-progress {
-  left: auto;
-  top: auto;
-  margin-top: 0;
-  -webkit-background-clip: 0;
-  right: -25px;
-  bottom: 10px;
+.ui-dialog .ui-dialog-content {
+  overflow: auto;
 }
 .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset button {
   display: inline-block;
@@ -3203,8 +3198,13 @@ body.path-search #block-mainpagecontent li {
 .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset button:hover {
   background-color: #92288d;
 }
-.node--type-class .ui-dialog .ui-dialog-content {
-  overflow: visible;
+.ui-dialog form [data-drupal-selector="edit-actions"] .ajax-progress {
+  left: auto !important;
+  top: auto;
+  margin-top: 0 !important;
+  -webkit-background-clip: 0;
+  right: -9px;
+  bottom: 10px;
 }
 
 #schedules-search-listing-wrapper .branch-hours-wrapper .card {
