--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -506,6 +506,9 @@ header#page-head {
       line-height: 10px;
       margin-top: 35px;
       @include transition(all 0.2s linear);
+      .node--type-camp & {
+        color: #f47820;
+      }
     }
   }
 
