--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -100,6 +100,11 @@
                       <a href="{{ front_page }}" title="{{ "Home"|t }}" rel="{{ "home"|t }}">
                         <img src="{{ camp_section_image }}" alt="{{ "Home"|t }}">
                       </a>
+                      <div class="ymca-branding-slogan hidden-xs hidden-sm">
+                        FOR YOUTH DEVELOPMENT <sup>®</sup><br>
+                        FOR HEALTHY LIVING<br>
+                        FOR SOCIAL RESPONSIBILITY
+                      </div>
                     </div>
                   </div>
                 {% else %}
