[YLI-588]: Updated areas translation.

--- a/openy_lily/templates/block/block--system-branding-block.html.twig
+++ b/openy_lily/templates/block/block--system-branding-block.html.twig
@@ -21,9 +21,9 @@
       <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" />
     </a>
     <div class="ymca-branding-slogan hidden-xs hidden-sm">
-      FOR YOUTH DEVELOPMENT <sup>®</sup><br>
-      FOR HEALTHY LIVING<br>
-      FOR SOCIAL RESPONSIBILITY
+      {{ 'FOR YOUTH DEVELOPMENT'|t }} <sup>®</sup><br>
+      {{ 'FOR HEALTHY LIVING'|t }}<br>
+      {{ 'FOR SOCIAL RESPONSIBILITY'|t }}
     </div>
   {% endif %}
   {% if site_name %}
