--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -101,9 +101,9 @@
                         <img src="{{ camp_section_image }}" alt="{{ "Home"|t }}">
                       </a>
                       <div class="ymca-branding-slogan hidden-xs hidden-sm">
-                        FOR YOUTH DEVELOPMENT <sup>®</sup><br>
-                        FOR HEALTHY LIVING<br>
-                        FOR SOCIAL RESPONSIBILITY
+                        {{ 'FOR YOUTH DEVELOPMENT'|t }} <sup>®</sup><br>
+                        {{ 'FOR HEALTHY LIVING'|t }}<br>
+                        {{ 'FOR SOCIAL RESPONSIBILITY'|t }}
                       </div>
                     </div>
                   </div>
