OYPD-621 Homepage changes for Verdana

--- a/themes/openy_themes/openy_rose/scss/modules/_membership.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_membership.scss
@@ -272,7 +272,7 @@ a[href="#step2"] {
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: $h2-size;
-    font-family: $font-style-cachet-ubuntu;
+    font-family: $font-style-sans;
     font-weight: 500;
     line-height: 1.1;
     color: inherit;
