--- a/themes/openy_themes/openy_rose/scss/modules/_program.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_program.scss
@@ -97,7 +97,7 @@
 
     .field-category-program {
       color: $white;
-      font-family: $font-style-cachet-ubuntu;
+      font-family: $font-style-sans;
       font-size: 28px;
       letter-spacing: -0.8px;
       line-height: 28px;
