--- a/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_paragraphs.scss
@@ -344,7 +344,7 @@
 
   .field-prgf-description h2 {
     color: $purple;
-    font-family: $font-style-cachet-ubuntu;
+    font-family: $font-style-sans;
     font-weight: bold;
     letter-spacing: normal;
     text-transform: none;
@@ -484,35 +484,35 @@
     text-transform: uppercase;
 
     @include breakpoint($screen-desktop) {
-      font-size: 48px;
-      line-height: 48px;
+      font-size: 40px;
+      line-height: 44px;
     }
 
     @include breakpoint($screen-lg-desktop) {
-      font-size: 50px;
-      line-height: 50px;
+      font-size: 44px;
+      line-height: 48px;
     }
   }
 
   &-description {
     @include cachet;
     color: $white;
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
     font-stretch: normal;
     font-weight: 500;
     line-height: 1.22;
 
     @include breakpoint($screen-tablet) {
-      font-size: 20px;
-      line-height: 25px;
+      font-size: 18px;
+      line-height: 22px;
       margin-bottom: 30px;
     }
   }
 
   .banner-btn {
     white-space: normal;
-    font-size: 20px;
+    font-size: 18px;
     padding: 0px;
     width: 100%;
 
@@ -739,7 +739,7 @@
   }
 
   .btn a {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     line-height: normal;
     padding: 0 24px ;
