--- a/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--small-banner.html.twig
+++ b/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--small-banner.html.twig
@@ -42,17 +42,19 @@
 'paragraph--type--' ~ paragraph.bundle|clean_class,
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 'banner',
+'banner--small',
 ] %}
 {% set color = '#' ~ content.field_prgf_color['#items'].entity.field_color.value %}
+{% set description_text = content.field_prgf_description.0['#text'] is not empty %}
 {% set background = content.field_prgf_image['#field_name'] %}
 {% if background is empty %}
-   {% set col_size %}
-     col-sm-12
-   {% endset %}
+  {% set col_size %}
+    col-sm-12
+  {% endset %}
 {% else %}
-   {% set col_size %}
-     col-sm-6
-   {% endset %}
+  {% set col_size %}
+    col-sm-6
+  {% endset %}
 {% endif %}
 <section id="small-text-banner" {{ attributes.addClass(classes).removeClass('banner') }}
          style='background-color: {{ color }}'>
@@ -64,7 +66,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
           {{ content.field_prgf_description }}
         </div>
       </div>
-      {% if background is not empty %}
+      {% if content.image_path is not empty %}
         <div class="col-sm-6 header-image"
             {% if content.image_path %} style="background-image: url({{ content.image_path }});"{% endif %}>
           <figure class="text-center visible-xs">
