--- a/themes/openy_themes/openy_rose/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_header.scss
@@ -3,6 +3,7 @@
 
   &__logo {
     display: inline-block;
+    width: 100%;
 
     @include breakpoint($screen-tablet) {
 
@@ -33,6 +34,29 @@
         height: 33px;
         margin-left: -22px;
         margin-top: 35px;
+      }
+    }
+
+    .site-slogan {
+      color: $lighter-grey;
+      display: block;
+      left: 0;
+      margin: auto;
+      position: absolute;
+      right: 0;
+      text-align: center;
+      text-transform: uppercase;
+      top: 20px;
+      &:hover {
+        text-decoration: none;
+      }
+      @include breakpoint($screen-desktop) {
+        top: 10px;
+      }
+
+      span {
+        border-bottom: 1px solid $light-blue;
+        padding: 0 5px 8px 5px;
       }
     }
   }
@@ -361,6 +385,9 @@
   margin-bottom: 13px;
   margin-top: 13px;
   padding: 9px 6px;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .navbar-default {
